Fix nginx rewrite conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,22 +3,13 @@ server {
     index index.html;
     server_name  localhost;
 
-    if (!-f "${request_filename}index.html") {
-        rewrite ^/(.*)/$ /$1 permanent;
-    }
-
-    if ($request_uri ~* "/index.html") {
-        rewrite (?i)^(.*)index\.html$ $1 permanent;
-    }   
-
-    if ($request_uri ~* ".html") {
-        rewrite (?i)^(.*)/(.*)\.html $1/$2 permanent;
-    }
-
     location / {
         root   /usr/share/nginx/html;
-        try_files $uri.html $uri $uri/ =404;
+        if ($request_uri ~ ^/(.*)\.html) {
+            return 302 /$1;
+        }
+        try_files $uri $uri.html $uri/ =404;
     }
 
-    error_page  404              /404.html;
+    error_page  404              /404;
 }
