--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-_site
+tmp
+*.rdb
+.env
 .sass-cache
+.DS_Store
+_site
 .jekyll-cache
-.jekyll-metadata
-vendor
-deploy.sh
+.git
+.vscode
+.obsidian
